[package]
name = "tstz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
swc_common = "0.34.1"
swc_ecma_ast = "0.115.1"
swc_ecma_parser = "0.146.8"
